# FactoryScript

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  TODO  TODO.md
.github/workflows/: cargo-tests.yml  rust.yml
core/: Cargo.toml  build.rs
core/src/: constants.rs  lib.rs  station_types.rs
core/src/station_types/: math.rs
docs/: conf.py  index.rst  mkdocs.yml  requirements.txt
docs/source/: conf.py  index.rst  station-ref.rst  stations.csv
docs/source/_static/: styles.css
docs/src/: index.md  station-ref.md
examples/: add.factory  fibonacci.factory  fizzbuzz.factory  for_loop.factory  greet.factory  hello_world.factory  hello_world_backwards.factory  hello_world_pretty.factory  test.factory
fabricate/: Cargo.toml
fabricate/src/: error.rs  lib.rs  runtime.rs  station.rs
fabricate/src/builtins/: math.rs  mod.rs
fabricate/src/preprocessor/: mod.rs  parse.rs  probe.rs  tests.rs
fabricate/src/preprocessor/parse/: tests.rs
fabricate/src/stdlib/: io.rs  math.rs  mod.rs
fs-core/: Cargo.toml
fs-core/src/: lib.rs
interpreter/: Cargo.toml
interpreter/src/: error.rs  lib.rs  macros.rs  main.rs  runtime.rs  station.rs
interpreter/src/builtins/: constants.rs  io.rs  math.rs  mod.rs
interpreter/src/fs_core/: mod.rs  stations.rs
interpreter/src/fs_core/stations/: control.rs  io.rs  math.rs
interpreter/src/pallet/: mod.rs
interpreter/src/preprocessor/: mod.rs  parse.rs  probe.rs  tests.rs
interpreter/src/preprocessor/conveyor_belt_parser/: belt_follower.rs  mod.rs  tests.rs
interpreter/src/preprocessor/parse/: tests.rs
interpreter/src/preprocessor/station_parser/: literal_parser.rs  mod.rs  tests.rs
interpreter/src/runtime/: mod.rs
interpreter/src/station/: mod.rs
interpreter/src/stdlib/: math.rs  mod.rs
interpreter/tests/: integration_tests.rs
stdlib/: Cargo.toml
stdlib/src/: lib.rs
(+1 files in other folders)
