[package]
name = "core"
description = "FactoryScript core library, contains common types, macros, and definitions"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
lazy_static = "1.5.0"

[[bin]]
name = "generate-docs"
path = "src/bin/generate_docs.rs"