[package]
name = "interpreter"
description = "The official FactoryScript interpreter"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
default-run = "interpreter"

[dependencies]
core = { path = "../core" }
clap = { version = "4.5.9", features = ["derive"] }
regex = "1.10.5"
lazy_static = "1.5.0"
paste = "1.0.15"

[[bin]]
name = "interpreter"
