[package]
name = "interpreter"
description = "The official FactoryScript interpreter"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
default-run = "factory"

[dependencies]
core = { path = "../core" }
clap = { version = "4.5.9", features = ["derive"] }
lazy_static = "1.5.0"


[[bin]]
name = "factory"
path = "src/bin/main.rs"
